--- a/src/components/chat/top/top.css
+++ b/src/components/chat/top/top.css
@@ -1,19 +1,36 @@
-.userInfo {
+.top {
   padding: 15px;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #dddddd35;
 
   .user {
     display: flex;
     align-items: center;
     gap: 15px;
-  
-    img {
-      width: 50px;
-      height: 50px;
+
+    .avatar {
+      width: 60px;
+      height: 60px;
       border-radius: 50%;
       object-fit: cover;
+    }
+
+    .texts {
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+
+      span {
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+      p {
+        font-size: 14px;
+        color: #a5a5a5;
+      }
     }
   }
 
@@ -21,7 +38,7 @@
     display: flex;
     gap: 15px;
 
-    img {
+    .icon {
       width: 20px;
       height: 20px;
       cursor: pointer;
