--- a/src/components/list/contactList/contactList.css
+++ b/src/components/list/contactList/contactList.css
@@ -1,4 +1,4 @@
-.chatList {
+.contactList {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@
       gap: 15px;
       border-radius: 20px;
 
-      img {
+      .icon {
         width: 20px;
         height: 20px;
       }
@@ -41,10 +41,10 @@
     }
   }
 
-  .people {
+  .userList {
     overflow-y: auto;
 
-    .person {
+    .user {
       display: flex;
       align-items: center;
       gap: 15px;
@@ -52,7 +52,7 @@
       cursor: pointer;
       border-bottom: 1px solid #dddddd35;
 
-      img {
+      .avatar {
         width: 50px;
         height: 50px;
         border-radius: 50%;
