--- a/src/components/dashboard/detail/chatDetail/chatDetail.css
+++ b/src/components/dashboard/detail/chatDetail/chatDetail.css
@@ -46,5 +46,13 @@
     &:hover {
       background-color: rgba(255, 0, 50, 1);
     }
+
+    &.logOut {
+      background-color: #1a73e87f;
+
+      &:hover {
+        background-color: #1a73e8ff;
+      }
+    }
   }
 }
